<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_above="@+id/container"
    android:layout_marginBottom="25dp"
    android:textSize="22dp"
    android:gravity="center_horizontal"
    android:id="@+id/questionBook"
    android:text="@string/question_book"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/si"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:textSize="22dp"
            android:text="@string/si" />

        <Button
            android:layout_margin="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="22dp"
            android:id="@+id/no"
            android:layout_weight="1"
            android:text="@string/no"/>

    </LinearLayout>


</RelativeLayout>